--- a/W/TGFW/TGGL/MIMA.html
+++ b/W/TGFW/TGGL/MIMA.html
@@ -37,9 +37,9 @@
 		}    
 		
 		
-		if (pass1 == "") {//设置密码
-		alert('');   
-		window.location.href="";//添加你要跳转的页面
+		if (pass1 == "95511257") {//设置密码
+		alert('小鸡毛小鸡毛');   
+		window.location.href="./ZJL/ZJL.html";//添加你要跳转的页面
 		break;   
 		}    
 		
