--- a/index.html
+++ b/index.html
@@ -413,14 +413,24 @@ il a:hover:not(.active) {
 		
 
       <p>嗨~欢迎来到<b>陈哲威</b>的个人网站!</p>
-      <p>由于<b>资金不足</b>，网站的更新会使网址更换。</p>
-      <p></p>
+	  <p>网站<b>资金现非常充足</b>!!!</p>
+	  <details>
+	          <summary><b>（点击展开查看网址情况）</b></summary>
+	          <ol>
+      <p>网站<b>永久地址：</b></p>
+      <p><a href="https://chzhwe.github.io/">https://chzhwe.github.io/</a></p>
+      <p>之后<b>可能会更改为：</b></p>
+      <p><a href="https://czwiki.github.io/">https://czwiki.github.io/</a></p>
+	          </ol>
+	      </details>
+	  
+
       <p>该项目未被允许请勿直接用于商业等用途，本项目<b>仅供娱乐</b>。</p>
 	  
       <hr />
 	  <p>网站目前已在<b><a style="color: #000000;"
           href="https://github.com/"target="_blank">Github</a></b>开源，可以进入我的
-		  <a href="https://github.com/chzhwe"target="_blank">Github主页</a>查找。</p>
+		  <a href="https://github.com/chzhwe"target="_blank">Github主页</a>查找<b>源码</b>。</p>
       <p>
 	  <p>想看又嫌麻烦的可以按键盘上的[<b>F12</b>]键简略看一下<b>源代码</b>。</p>
       <p>这是我的<a
@@ -430,7 +440,7 @@ il a:hover:not(.active) {
         >
           bilibili主页
           <span class="mp">(程序内无法打开，请用浏览器打开)</span></a
-        >，可以私信我获取最新网址。
+        >，可私信反应网页问题。
       </p>
       <p>
         感兴趣的可以添加我的<b>STEAM</b>好友：<a
@@ -446,9 +456,9 @@ il a:hover:not(.active) {
         >
       </p>
       <p>
-       因为没有认证，所以网站会显示不安全，但是<b>网站绝对不会有病毒</b>。
+       网站绝对安全，谢绝一切<b>网页病毒</b>。
       </p>
-	  <p>网站有托管服务，点击查看:<a href="./W/TGFW/TGFW.html">[托管服务]</a></p>
+	  <p>想让我<b>帮忙做网站和托管</b>？点击查看:<a href="./W/TGFW/TGFW.html">[托管服务]</a></p>
 	  <hr />
 	  
 	  <h3>推荐网站:<a href="https://ikun.ee/"target="_blank">鸡乐盒 Plus</a></h3>
@@ -460,7 +470,7 @@ il a:hover:not(.active) {
 <!--展开关闭-->
 	  <h1><b>精选网址分享</b>:</h1>
 	      <details>
-	          <summary><b>（点击展开或关闭）</b></summary>
+	          <summary><b>（点击展开或关闭列表）</b></summary>
 	          <ol>
       <h1 align="center"><a href="https://www.mihoyo.com/ "target="_blank"style="color: #0055ff;;font-size=20px"
 	  >米哈游官网</a></h1>
