--- a/W/Easter egg/H.html
+++ b/W/Easter egg/H.html
@@ -457,6 +457,8 @@ clickEffect();//调用特效函数
 欲望的驱使是沉溺，戒色的选择是远离堕落。---
 色即是空，空即是色。---
 		  </marquee>
+		  <h3><a href="C654.CC"
+		  target="_blank">总结自找</a></h3>
 	  <hr />
 	  
       <h2>---视频专区---</h2>
@@ -490,7 +492,15 @@ clickEffect();//调用特效函数
 	  <h3>路线二:<a href="https://xerocos.com/"
 	  target="_blank">Xerocos</a></h3>
 	  
-	  
+      <hr />
+	  <h2>---其它---</h2>
+	  <h3>1:<a href="https://www.hxbb135.com/"
+	  target="_blank">红杏视频</a></h3>
+	  <h3>2:<a href="https://wov3.vip"
+	  target="_blank">桃子视频</a></h3>
+	  <h3>3:<a href="https://www.kmkk102.com/"
+	  target="_blank">快猫视频</a></h3>
+
 
  
 		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #b10000;">
