--- a/W/TGFW/TGGL/MIMA.html
+++ b/W/TGFW/TGGL/MIMA.html
@@ -44,6 +44,13 @@
 		}    
 		
 		
+		if (pass1 == "xtlfxs") {//设置密码
+		alert('欢迎来到1933-1945年的纳粹德国时期');   
+		window.location.href="./TWZ/TWZ.html";//添加你要跳转的页面
+		break;   
+		}    
+		
+		
 		testV+=1;   
 		var pass1 =    
 		prompt('密码不存在，请重新输入:','');   
