--- a/W/TGFW/TGGL/TWZ/TWZ.html
+++ b/W/TGFW/TGGL/TWZ/TWZ.html
@@ -1,3 +1,14 @@
+<!--
+_________                   .__  __    .__ 
+\_   ___ \ __________  _  __|__||  | __|__|
+/    \  \/ \___   /\ \/ \/ /|  ||  |/ /|  |
+\     \____ /    /  \     / |  ||    < |  |
+ \______  //_____ \  \/\_/  |__||__|_ \|__|
+        \/       \/                  \/    
+		
+
+
+-->
 <!DOCTYPE html>
 <html>
 	<head>
@@ -7,13 +18,19 @@
 	</head>
 	<body>
 
+<!-- 纳粹 -->
+		<div style="text-align: center; width: 500px; border: green solid 1px;">
+		<img alt="" src="./NCGQ.png" style="margin: 0 auto;" />
+		</div>
 		
-		
-		
-		<img src="./NCGQ.png" alt="text">
-		<h2>战歌：</h2>
-<audio src="./DGGQ.mp3" loop="loop" controls="controls" autoplay="autoplay"></audio>
+<audio src="https://ws.stream.qqmusic.qq.com/M500002430xW4Zi6G0.mp3?guid=4220211900&vkey=DBF09339559E2D3CE43059E669F394105AECC89BB419892CBB08B9EE783C0025AB647ED804F3FCE96C894D9E9ED61E5321F91F420B851311&uin=&fromtag=123042&src=M500004QUyXI3oMW5x.mp3" loop="loop" controls="controls" autoplay="autoplay"></audio>
 
+<!-- 苏联 -->
+		<div style="text-align: center; width: 500px; border: green solid 1px;">
+		<img alt="" src="./SLGQ.png" style="margin: 0 auto;" />
+		</div>
+
+<audio src="https://ws.stream.qqmusic.qq.com/M500004Gjvyl1xxPRn.mp3?guid=4220211900&vkey=0AFEC946168F4AB14AC813F8318E6B1F8966808D521D987C3DF09CAF1668F55724E91B76490BC644934613E0AD612AC58B95F9F18B2D4F93&uin=&fromtag=123042&src=M500000PItr43H3me7.mp3" loop="loop" controls="controls" autoplay="autoplay"></audio>
 
 
 	</body>
