--- a/W/Easter egg/H.html
+++ b/W/Easter egg/H.html
@@ -457,8 +457,7 @@ clickEffect();//调用特效函数
 欲望的驱使是沉溺，戒色的选择是远离堕落。---
 色即是空，空即是色。---
 		  </marquee>
-		  <h3><a href="C654.CC"
-		  target="_blank">总结自找</a></h3>
+
 	  <hr />
 	  
       <h2>---视频专区---</h2>
@@ -471,6 +470,13 @@ clickEffect();//调用特效函数
 	  
 	  <h3><a href="https://5x1688.xyz"
 	  target="_blank">YOURPORN网址丢失点我</a></h3>
+	  
+	  <h3>1:<a href="https://www.hxbb135.com/"
+	  target="_blank">红杏视频</a></h3>
+	  <h3>2:<a href="https://wov3.vip"
+	  target="_blank">桃子视频</a></h3>
+	  <h3>3:<a href="https://www.kmkk102.com/"
+	  target="_blank">快猫视频</a></h3>
 	  
       <hr />
 	  
@@ -494,12 +500,10 @@ clickEffect();//调用特效函数
 	  
       <hr />
 	  <h2>---其它---</h2>
-	  <h3>1:<a href="https://www.hxbb135.com/"
-	  target="_blank">红杏视频</a></h3>
-	  <h3>2:<a href="https://wov3.vip"
-	  target="_blank">桃子视频</a></h3>
-	  <h3>3:<a href="https://www.kmkk102.com/"
-	  target="_blank">快猫视频</a></h3>
+	  <h3><a href="C654.CC"
+	  target="_blank">软件下载和网址</a></h3>
+	  <h3><a href="https://dl.8546512.com:4139/48/363889"
+	  target="_blank">禁漫天堂app下载</a></h3>
 
 
  
