--- a/index.html
+++ b/index.html
@@ -296,6 +296,8 @@ il a:hover:not(.active) {
 }
 </style>
 	
+
+
 	
   </head>
 <!--身体-->
@@ -307,10 +309,11 @@ il a:hover:not(.active) {
 <!--导航栏-->
 <ul>
 	
-  <il><b><a  style="color: #ffffff" href="index.html">Czwiki</a></b></il>
-  <il><a class="active" href="index.html">主页</a></il>
+  <il><b><a class="active" style="color: #ffffff" href="index.html">Czwiki</a></b></il>
+  <il><a href="index.html" onclick='return confirm("你没有看错！！！这就是陈哲威写了几个月的网站,你问我网站有什么用,我也不知道。");'>关于</font></a>  </il>
   <il><a href="./W/WXSK/WXSK.html">赞助</a></il>
-  <il><a href="./W/TGFW/TGFW.html">托管服务</a></il>
+  <il><a href="./W/TGFW/TGFW.html">网站服务</a></il>
+
 </ul>
 
 
