--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@ if (!visits)
 else
     visits = parseInt(visits) + 1
 setCookie("counter", visits, now)
-document.write("网站已被访问" + visits + "次")
+document.write("你已访问网站" + visits + "次")
 // -->
 </script>
 
