--- a/W/Easter egg/H.html
+++ b/W/Easter egg/H.html
@@ -505,7 +505,6 @@ clickEffect();//调用特效函数
 	  <h3><a href="https://dl.8546512.com:4139/48/363889"
 	  target="_blank">禁漫天堂app下载</a></h3>
 
-
  
 		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #b10000;">
 欲望如潮水，唯有戒色才能守住内心的平静。---
@@ -522,6 +521,48 @@ clickEffect();//调用特效函数
 欲望的驱使是沉溺，戒色的选择是远离堕落。---
 		  </marquee>
 <h1 align="center"><a style="color: #07abf1"href="javascript:history.back(-1)">（返回）</a></h1>
+
+
+
+
+
+<!--展开关闭-->
+	      <details>
+	          <summary><b>XZY</b></summary>
+	          <ol>
+    <!-- h5 -->
+    <video src="./XZY.mp4" controls autoplay loop class="video">
+        你的浏览器版本太低，请升级到更高版本！
+    </video>             
+ 
+ 
+    <!-- flash -->
+    <object type="application/x-shockwave-flash" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" class="video">
+        <param name="movie" value="flvplayer.swf" />
+        <param name="quality" value="high" />
+        <param name="allowFullScreen" value="true" />
+        <param name="FlashVars" value="vcastr_file=test.mp4&LogoText=description&BufferTime=3&IsAutoPlay=1">
+    </object> 
+   
+ 
+    <!-- windows media player 仅ie支持（ie7/i7+） 这个classid很关键，ie靠这个识别对象的实现应用 -->
+    <object id="video" class="video" border="0" classid="clsid:22D6F312-B0F6-11D0-94AB-0080C74C7E95">
+        <param name="ShowDisplay" value="0">
+        <param name="ShowControls" value="1">
+        <param name="AutoStart" value="1">
+        <param name="AutoRewind" value="0">
+        <param name="PlayCount" value="0">
+        <param name="Appearance" value="0">
+        <param name="BorderStyle" value="0">
+        <param name="MovieWindowHeight" value="240">
+        <param name="MovieWindowWidth" value="320">
+        <param name="FileName" value="test.avi">
+    </object>
+
+	          </ol>
+	      </details>
+
+
 </body>
 
 
