--- a/index.html
+++ b/index.html
@@ -551,8 +551,13 @@ il a:hover:not(.active) {
       
 
       <hr />
-<video src="https://upos-sz-mirror08c.bilivideo.com/upgcxcode/28/14/504181428/504181428_nb2-1-16.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&amp;uipk=5&amp;nbs=1&amp;deadline=1698479811&amp;gen=playurlv2&amp;os=08cbv&amp;oi=0&amp;trid=98bc8eddb6bb4c968af5710231b594f9h&amp;mid=1831160594&amp;platform=html5&amp;upsig=0fb2ce52ba7c24a03fefe471a000608e&amp;uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform&amp;bvc=vod&amp;nettype=0&amp;f=h_0_0&amp;bw=48324&amp;logo=80000000" controls="controls" width="700px" height="400px"></video>
-	  
+
+
+
+
+
+
+
 	  
 	  <!-- 谷歌恐龙 -->
 	      <div id="main-frame-error" class="interstitial-wrapper">
@@ -787,7 +792,44 @@ document.write("你已访问网站" + visits + "次")
 // -->
 </script>
 
+<script>
+    function secondToDate(second) {
+        if (!second) {
+            return 0;
+        }
+        var time = new Array(0, 0, 0, 0, 0);
+        if (second >= 365 * 24 * 3600) {
+            time[0] = parseInt(second / (365 * 24 * 3600));
+            second %= 365 * 24 * 3600;
+        }
+        if (second >= 24 * 3600) {
+            time[1] = parseInt(second / (24 * 3600));
+            second %= 24 * 3600;
+        }
+        if (second >= 3600) {
+            time[2] = parseInt(second / 3600);
+            second %= 3600;
+        }
+        if (second >= 60) {
+            time[3] = parseInt(second / 60);
+            second %= 60;
+        }
+        if (second > 0) {
+            time[4] = second;
+        }
+        return time;
+    }</script><script type="text/javascript" language="javascript">
+    function setTime() {
+        var create_time = Math.round(new Date(Date.UTC(2023, 10, 28, 15, 0, 0)).getTime() / 1000);
+        var timestamp = Math.round((new Date().getTime() + 8 * 60 * 60 * 1000) / 1000);
+        currentTime = secondToDate((timestamp - create_time));
+        currentTimeHtml = currentTime[0] + '年' + currentTime[1] + '天'
+                + currentTime[2] + '时' + currentTime[3] + '分' + currentTime[4]
+                + '秒';
+        document.getElementById("htmer_time").innerHTML = currentTimeHtml;
+    }    setInterval(setTime, 1000);</script>
 
+网站距离上次更新已过去：<span id="htmer_time" style="color: red;"></span>
 
 <p>        <a 
           style="color: #f1f1f1;float:right"
