--- a/W/Easter egg/H.html
+++ b/W/Easter egg/H.html
@@ -462,41 +462,62 @@ clickEffect();//调用特效函数
 	  
       <h2>---视频专区---</h2>
 	  
-	  <h3>路线一:<a href="https://yp1nalmgqujl.com:29875/"
+	  <h3>1·<a href="https://yp1nalmgqujl.com:29875/"
 	  target="_blank">YOURPORN</a></h3>
 	  
-	  <h3>路线二:<a href="https://cgtvyyfuumxh.com:29875/"
-	  target="_blank">YOURPORN-备用</a></h3>
+	  <h3>2·<a href="https://5x1688.xyz"
+	  target="_blank">YOURPORN网址丢失点我</a></h3>	  
 	  
-	  <h3><a href="https://5x1688.xyz"
-	  target="_blank">YOURPORN网址丢失点我</a></h3>
+	  <h3>3·<a href="https://mm18j3.uno/"
+	  target="_blank">MIMI18j</a></h3>
 	  
-	  <h3>1:<a href="https://www.hxbb135.com/"
+	  <h3>4·<a href="https://you.xxxxxxav1x135.xyz/t/24/"
+	  target="_blank">XXXX动画</a></h3>
+	  
+	  <h3>5·<a href="https://91cangku26.buzz/"
+	  target="_blank">91仓库</a></h3>
+	  
+	  <h3>6·<a href="https://banan10.buzz/"
+	  target="_blank">banan</a></h3>
+	  
+	  <h3>7·<a href="https://www.hxbb135.com/"
 	  target="_blank">红杏视频</a></h3>
-	  <h3>2:<a href="https://wov3.vip"
+	  
+	  <h3>8·<a href="https://wov3.vip"
 	  target="_blank">桃子视频</a></h3>
-	  <h3>3:<a href="https://www.kmkk102.com/"
+	  
+	  <h3>9·<a href="https://www.kmkk102.com/"
 	  target="_blank">快猫视频</a></h3>
+	  
 	  
       <hr />
 	  
       <h2>---漫画专区---</h2>
 	  
-      <h3>路线一:<a href="http://www.24manhua.com/"
+      <h3>1·<a href="http://www.24manhua.com/"
 	  target="_blank">24漫画网</a></h3>
 	  
-	  <h3>路线二:<a href="https://www.mhdg15.com/"
+	  <h3>2·<a href="https://www.mhdg15.com/"
 	  target="_blank">漫画帝国</a></h3>
 
       <hr />
 	  
       <h2>---图片专区---</h2>
 	  
-	  <h3>路线一:<a href="https://rucidongren.neocities.org/"
-	  target="_blank">乳此动人</a></h3>
+	  <h3>1·<a href="https://xxxxssss121.buzz/arttype/2000/"
+	  target="_blank">XXXX美图</a></h3>
 	  
-	  <h3>路线二:<a href="https://xerocos.com/"
+	  <h3>2·<a href="https://xerocos.com/"
 	  target="_blank">Xerocos</a></h3>
+      <hr />
+	  <h2>---小说专区---</h2>
+	  
+	  <h3>1·<a href="https://you.xxxxxxav1x135.xyz/arttype/1000/"
+	  target="_blank">XXXX小说</a></h3>
+	  
+	  <h3>2·<a href="https://91fm.online/"
+	  target="_blank">色色有声小说</a></h3>
+	  
 	  
       <hr />
 	  <h2>---其它---</h2>
@@ -504,7 +525,12 @@ clickEffect();//调用特效函数
 	  target="_blank">软件下载和网址</a></h3>
 	  <h3><a href="https://dl.8546512.com:4139/48/363889"
 	  target="_blank">禁漫天堂app下载</a></h3>
-
+	  <h3><a href="https://yuietgjfd-f98g2g968d.xodlapp3vs333.sbs/%E5%81%A5%E5%BA%B7%E7%B6%A0%E8%89%B2/kke3d-a.html"
+	  target="_blank">XO软件大全下载</a></h3>
+	  <h3><a href="https://pz.2sy91h.xyz/?ch=anyeav#/home"
+	  target="_blank">Pornhub下载</a></h3>
+	  <h3><a href="https://iyue.f4ttd9j.cc/page.html?dc=brga20812"
+	  target="_blank">逼哩逼哩下载</a></h3>
  
 		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #b10000;">
 欲望如潮水，唯有戒色才能守住内心的平静。---
