--- a/index.html
+++ b/index.html
@@ -414,8 +414,10 @@ body {
 		
 
 		<!--滚动条-->
-		<marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #959595;">
-			网站
+		<marquee behavior="alternate" scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #959595;">
+			
+
+			
 		</marquee>
 		  
 		  
