--- a/W/Easter egg/H.html
+++ b/W/Easter egg/H.html
@@ -401,7 +401,7 @@ clickEffect();//调用特效函数
 
 
     <div style="background-image: linear-gradient(#ffffff,#cfc5ff, #ffffff);; text-align: center; padding: 40px">
-		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #b10000;">
+		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #ff00ff;">
 一念欲乱，万般皆难；一念清净，万事皆顺。---
 淫欲的追逐只会带来短暂的享受，而戒色则能带来长久的内心安宁。---
 欲望是束缚灵魂的枷锁，而戒色则是解开枷锁的钥匙。---
@@ -438,58 +438,72 @@ clickEffect();//调用特效函数
 
 
 
-
-
-
-
-		
-		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #b10000;">
+ 
+		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #ff00ff;">
+欲望如潮水，唯有戒色才能守住内心的平静。---
+色即是空，空即是色。---
 空即色来色即空，色字头上利刀锋；劝君莫堕迷魂阵，何愁富贵不相逢。---
 天眼如车瞬息间，报应昭彰在目前；淫人妻女人淫报，风流莫恋害晚年。---
 欲望无止境，戒色方能自由。---
-花开花谢，人世沧桑，戒色才能保持内心的恒久安宁。---
-从容拒绝，收获内心的坚强和自尊。---
 一念欲乱，万般皆难；一念清净，万事皆顺。---
 淫欲的追逐只会带来短暂的享受，而戒色则能带来长久的内心安宁。---
 欲望是束缚灵魂的枷锁，而戒色则是解开枷锁的钥匙。---
-欲望如潮水，唯有戒色才能守住内心的平静。---
+花开花谢，人世沧桑，戒色才能保持内心的恒久安宁。---
+从容拒绝，收获内心的坚强和自尊。---
 戒除淫欲，心灵将得到真正的解放与升华。---
 欲望的驱使是沉溺，戒色的选择是远离堕落。---
-色即是空，空即是色。---
 		  </marquee>
+
+
+
+<h3>警告:</h3>
+<p>请注意设备是否开启了[投屏]防止社死,被发现了建议重开!</p>
 
 	  <hr />
 	  
       <h2>---视频专区---</h2>
+	  <h3>1·<a href="https://9pa9wj.5xss255aa.life/"
+	  target="_blank">5X视频链接一</a></h3>
 	  
-	  <h3>1·<a href="https://yp1nalmgqujl.com:29875/"
+	  <h3>2·<a href="https://3hmm3n.5x1uiy1.info/"
+	  target="_blank">5X视频链接二</a></h3>
+	  
+	  <h3>3·<a href="https://zjr5zn.5xpps122.life/"
+	  target="_blank">5X视频链接三</a></h3>
+	  
+	  <h3>4·<a href="https://shaonvs32.buzz/"
+	  target="_blank">少女社</a></h3>	  
+	  
+	  <h3>5·<a href="https://yibosp14.buzz/"
+	  target="_blank">易勃视频</a></h3>
+	  
+	  <h3>6·<a href="https://yp1nalmgqujl.com:29875/"
 	  target="_blank">YOURPORN</a></h3>
 	  
-	  <h3>2·<a href="https://5x1688.xyz"
+	  <h3>7·<a href="https://5x1688.xyz"
 	  target="_blank">YOURPORN网址丢失点我</a></h3>	  
-	  
-	  <h3>3·<a href="https://mm18j3.uno/"
+
+	  <h3>8·<a href="https://mm18j3.uno/"
 	  target="_blank">MIMI18j</a></h3>
 	  
-	  <h3>4·<a href="https://you.xxxxxxav1x135.xyz/t/24/"
+	  <h3>9·<a href="https://you.xxxxxxav1x135.xyz/t/24/"
 	  target="_blank">XXXX动画</a></h3>
 	  
-	  <h3>5·<a href="https://91cangku26.buzz/"
+	  <h3>10·<a href="https://91cangku26.buzz/"
 	  target="_blank">91仓库</a></h3>
 	  
-	  <h3>6·<a href="https://banan10.buzz/"
+	  <h3>11·<a href="https://banan10.buzz/"
 	  target="_blank">banan</a></h3>
 	  
-	  <h3>7·<a href="https://www.hxbb135.com/"
+	  <h3>12·<a href="https://www.hxbb135.com/"
 	  target="_blank">红杏视频</a></h3>
 	  
-	  <h3>8·<a href="https://wov3.vip"
+	  <h3>13·<a href="https://wov3.vip"
 	  target="_blank">桃子视频</a></h3>
 	  
-	  <h3>9·<a href="https://www.kmkk102.com/"
+	  <h3>14·<a href="https://www.kmkk102.com/"
 	  target="_blank">快猫视频</a></h3>
-	  
-	  
+
       <hr />
 	  
       <h2>---漫画专区---</h2>
@@ -509,6 +523,7 @@ clickEffect();//调用特效函数
 	  
 	  <h3>2·<a href="https://xerocos.com/"
 	  target="_blank">Xerocos</a></h3>
+
       <hr />
 	  <h2>---小说专区---</h2>
 	  
@@ -518,7 +533,7 @@ clickEffect();//调用特效函数
 	  <h3>2·<a href="https://91fm.online/"
 	  target="_blank">色色有声小说</a></h3>
 	  
-	  
+
       <hr />
 	  <h2>---其它---</h2>
 	  <h3><a href="C654.CC"
@@ -532,7 +547,7 @@ clickEffect();//调用特效函数
 	  <h3><a href="https://iyue.f4ttd9j.cc/page.html?dc=brga20812"
 	  target="_blank">逼哩逼哩下载</a></h3>
  
-		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #b10000;">
+		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #ff00ff;">
 欲望如潮水，唯有戒色才能守住内心的平静。---
 色即是空，空即是色。---
 空即色来色即空，色字头上利刀锋；劝君莫堕迷魂阵，何愁富贵不相逢。---
