--- a/W/Easter egg/H.html
+++ b/W/Easter egg/H.html
@@ -508,11 +508,11 @@ clickEffect();//调用特效函数
 	  
       <h2>---漫画专区---</h2>
 	  
-      <h3>1·<a href="http://www.24manhua.com/"
-	  target="_blank">24漫画网</a></h3>
+      <h3>1·<a href="https://www.fangjidao.cn/"
+	  target="_blank">虚空漫画网</a></h3>
 	  
-	  <h3>2·<a href="https://www.mhdg15.com/"
-	  target="_blank">漫画帝国</a></h3>
+	  <h3>2·<a href=""
+	  target="_blank"></a></h3>
 
       <hr />
 	  
