--- a/W/Easter egg/Easter egg.html
+++ b/W/Easter egg/Easter egg.html
@@ -114,7 +114,7 @@
 		</script>
 		<br>
 		<h1 align="center">你点进了一个<a style="color: #000000;text-decoration:none"
-		href="https://www.gov.cn/">隐藏网址</a>是否要进入？</h1>
+		href="./H.html">隐藏网址</a>是否要进入？</h1>
 		<br>
 		<h1 align="center">内容比较反感</h1>
 		<br>
