--- a/W/Easter egg/Easter egg.html
+++ b/W/Easter egg/Easter egg.html
@@ -116,9 +116,9 @@
 		<h1 align="center">你点进了一个<a style="color: #000000;text-decoration:none"
 		href="./H.html">隐藏网址</a>是否要进入？</h1>
 		<br>
-		<h1 align="center">内容比较反感</h1>
+		<h1 align="center">内容非常正能量</h1>
 		<br>
-		<h2 align="center">(三思而后行......)</h2>
+		<h2 align="center">(必须给我进入......)</h2>
 		<br>
 		<br>
 		<br>
@@ -126,6 +126,6 @@
 		<h1 align="center"><a style="color: #07abf1"href="javascript:history.back(-1)">（返回）</a></h1>
 		<br>
 		<br>
-        <h1 align="center"><a style="color: #f10004"href="http://cyriak.co.uk/animation/">（进入）</a></h1>
+        <h1 align="center"><a style="color: #f10004"href="https://www.gov.cn/">（进入）</a></h1>
 	</body>
 </html>
