--- a/W/TGFW/TGGL/MIMA.html
+++ b/W/TGFW/TGGL/MIMA.html
@@ -51,6 +51,13 @@
 		}    
 		
 		
+		if (pass1 == "YCWZ") {//设置密码
+		alert('欢迎来到隐藏网址');   
+		window.location.href="./Easter egg/Easter egg.html";//添加你要跳转的页面
+		break;   
+		}    
+
+		
 		testV+=1;   
 		var pass1 =    
 		prompt('密码不存在，请重新输入:','');   
