--- a/W/TGFW/TGGL/Easter egg/JLW.html
+++ b/W/TGFW/TGGL/Easter egg/JLW.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta charset="utf-8" />
-    <title>极乐网</title>
+    <title>生蚝海鲜网</title>
     <meta
       name="description"
       content="极乐网"
@@ -90,7 +90,7 @@ history.go(-1);
  
 if (pass1 == "JLW") { 
  
-alert('欢迎进入极乐网!'); 
+alert('欢迎进入生蚝海鲜网!'); 
  
 break; 
  
@@ -137,7 +137,7 @@ function clickEffect() {
   let origin;
   let normal;
   let ctx;
-  const colours = ["#ff0000", "#ffff00", "#00aaff", "#55ff7f", "#aa55ff"];
+  const colours = ["#5555ff", "#55ffff", "#00aaff", "#5500ff", "#0000ff"];
   const canvas = document.createElement("canvas");
   document.body.appendChild(canvas);
   canvas.setAttribute("style", "width: 100%; height: 100%; top: 0; left: 0; z-index: 99999; position: fixed; pointer-events: none;");
@@ -272,7 +272,7 @@ clickEffect();//调用特效函数
     <script>
         (function fairyDustCursor() {
  
-            var possibleColors = ["#aa0000", "#ffff00", "#00aaff"]
+            var possibleColors = ["#5555ff", "#55ffff", "#00aaff"]
             var width = window.innerWidth;
             var height = window.innerHeight;
             var cursor = { x: width / 2, y: width / 2 };
@@ -400,8 +400,8 @@ clickEffect();//调用特效函数
 
 
 
-    <div style="background-image: linear-gradient(#ffffff,#cfc5ff, #ffffff);; text-align: center; padding: 40px">
-		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #ff00ff;">
+    <div style="background-image: linear-gradient(#ffffff,#00aaff, #ffffff);; text-align: center; padding: 40px">
+		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #00007f;">
 一念欲乱，万般皆难；一念清净，万事皆顺。---
 淫欲的追逐只会带来短暂的享受，而戒色则能带来长久的内心安宁。---
 欲望是束缚灵魂的枷锁，而戒色则是解开枷锁的钥匙。---
@@ -415,12 +415,12 @@ clickEffect();//调用特效函数
 花开花谢，人世沧桑，戒色才能保持内心的恒久安宁。---
 从容拒绝，收获内心的坚强和自尊。---
 		  </marquee>
-          <h1 align="center"><b>\---/极乐网\---/</b></h1>
-
+          <h1 align="center"><b>生蚝海鲜网</b></h1>
+<p align="center"style="color: #ffc737;">------极乐world</p>
     </div>
 
     <article
-      style="background-image: linear-gradient(#ffffff,#ffff7f, #ffffff);
+      style="background-image: linear-gradient(#ffffff,#55ffff, #ffffff);
         max-width: 760px;
         margin: 30px auto;
         padding: 15px;
@@ -439,7 +439,7 @@ clickEffect();//调用特效函数
 
 
  
-		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #ff00ff;">
+		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #00007f;">
 欲望如潮水，唯有戒色才能守住内心的平静。---
 色即是空，空即是色。---
 空即色来色即空，色字头上利刀锋；劝君莫堕迷魂阵，何愁富贵不相逢。---
@@ -456,8 +456,8 @@ clickEffect();//调用特效函数
 
 
 
-<h3>警告:</h3>
-<p>请注意设备是否开启了[投屏]防止社死,被发现了建议重开!</p>
+
+<p>还是海里的海鲜多......</p>
 
 	  <hr />
 	  
@@ -547,7 +547,7 @@ clickEffect();//调用特效函数
 	  <h3><a href="https://iyue.f4ttd9j.cc/page.html?dc=brga20812"
 	  target="_blank">逼哩逼哩下载</a></h3>
  
-		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #ff00ff;">
+		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #00007f;">
 欲望如潮水，唯有戒色才能守住内心的平静。---
 色即是空，空即是色。---
 空即色来色即空，色字头上利刀锋；劝君莫堕迷魂阵，何愁富贵不相逢。---
@@ -561,7 +561,15 @@ clickEffect();//调用特效函数
 戒除淫欲，心灵将得到真正的解放与升华。---
 欲望的驱使是沉溺，戒色的选择是远离堕落。---
 		  </marquee>
-<h1 align="center"><a style="color: #07abf1"href="javascript:history.back(-1)">（返回）</a></h1>
+
+
+<button onclick="removePage()">删除当前页面/浏览记录</button>
+
+<script>
+function removePage() {
+  window.history.replaceState({}, "", "/deleted-page");
+}
+</script>
 
 
 
