--- a/index.html
+++ b/index.html
@@ -856,12 +856,12 @@ function() {
           href="./W/WXSK/WXSK.html"
           >（捐赠作者和网站）</a
         >
-		<a
+</h2>
+<h2>		<a
 		          style="margin: 20px;color: #ffd66e"
-		          href="./W/WXSK/WXSK.html"
+		          href="https://kiku.page/4FPAAcsW"
 		          >（意见和问题反馈）</a
 		        ></h2>
-		
 
 		<p>未经允许请勿用于商业用途,本项目仅供娱乐!</p>
 		<h3><b>©2023 Czwiki   无公安网备案</b></h3>
