--- a/W/TGFW/TGGL/MIMA.html
+++ b/W/TGFW/TGGL/MIMA.html
@@ -30,7 +30,7 @@
 		}    
 		
 		
-		if (pass1 == "123456") {//设置密码
+		if (pass1 == "123456789") {//设置密码
 		alert('管理员调试页面');   
 		window.location.href="./W.jpg";//添加你要跳转的页面
 		break;   
@@ -51,9 +51,9 @@
 		}    
 		
 		
-		if (pass1 == "YCWZ") {//设置密码
-		alert('欢迎来到隐藏网址');   
-		window.location.href="./Easter egg/Easter egg.html";//添加你要跳转的页面
+		if (pass1 == "JLW") {//设置密码
+		alert('欢迎来到JLworld');   
+		window.location.href="./JLworld/AJLworld.html";//添加你要跳转的页面
 		break;   
 		}    
 
