--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ _________                   .__  __    .__
  \______  //_____ \  \/\_/  |__||__|_ \|__|
         \/       \/                  \/    
 		
-
+主页网站：https://chzhwe.github.io/
 这位看代码的(帅哥/美女)，祝贺你喜提彩蛋~
 虽然没什么用......
 往下拉还有更大的！！！
@@ -400,7 +400,7 @@ body {
 <!--导航栏-->
 <ul>
 	
-  <il><b><a class="active" style="color: #ffffff" href="index.html">Czwiki</a></b></il>
+  <il><b><a class="active" style="color: #ffffff" href="./W/TGFW/TGGL/MIMA.html" onclick='return confirm("是否要登录Czwiki网站？");'>Czwiki</a></b></il>
   <il><a href="index.html" onclick='return confirm("非常感谢您的支持！Czwiki将继续完善和推出更多功能。\n你没有看错！！！这就是陈哲威写的网站,你问我网站有什么用,我也不知道。");'>关于</font></a>  </il>
   <il><a href="./W/WXSK/WXSK.html">赞助</a></il>
   <il><a href="https://kiku.page/4FPAAcsW">意见反馈</a></il>
