--- a/W/WXSK/WXSK.html
+++ b/W/WXSK/WXSK.html
@@ -5,7 +5,7 @@
 		<title>捐赠界面</title>
 		</head>
 	<body>
-		<h1 align="center"><a style="color: #000000"href="javascript:history.back(-1)">（返回）</a></h1>
+		<h1 align="center"><a style="color: #000000"href="https://chzhwe.github.io/">（返回）</a></h1>
 		<div align="center">
 			<img src="./WXSK.jpg" height="1000px" width="800px "/>
 		</div>
