--- a/index.html
+++ b/index.html
@@ -400,9 +400,9 @@ body {
 <!--导航栏-->
 <ul>
 	
-  <il><b><a class="active" style="color: #ffffff" href="./W/TGFW/TGGL/MIMA.html" onclick='return confirm("是否要登录Czwiki网站？");'>Czwiki</a></b></il>
+  <il><b><a class="active" style="color: #ffffff" href="https://chzhwe.github.io" onclick=';'>主页</a></b></il>
   <il><a href="index.html" onclick='return confirm("非常感谢您的支持！Czwiki将继续完善和推出更多功能。\n你没有看错！！！这就是陈哲威写的网站,你问我网站有什么用,我也不知道。");'>关于</font></a>  </il>
-  <il><a href="./W/WXSK/WXSK.html">赞助</a></il>
+  <il><a href="./W/donation/WXSK.html">赞助</a></il>
   <il><a href="https://kiku.page/4FPAAcsW">意见反馈</a></il>
 
 </ul>
@@ -511,7 +511,7 @@ body {
 		
 		
 
-      <p>嗨~欢迎来到<b>陈哲威</b>的个人网站!</p>	  
+      <p>嗨~欢迎来到<b>Czwiki</b>导航网!</p>	  
 
 
 
@@ -575,15 +575,15 @@ body {
       <p>
        网站绝对安全，谢绝一切<b>网页病毒</b>。
       </p>
-	  <p>想让我<b>帮忙做网站和托管</b>？点击查看:<a href="./W/TGFW/TGFW.html">[托管服务]</a></p>
+	  <p>想让我<b>帮忙做网站和托管</b>？点击查看:<a href="./W/Web hosting/Web hosting.html">[网站托管]</a></p>
 
 	  <hr />
 	  
-	  <h3>推荐网站:<a href="https://ikun.ee/"target="_blank">鸡乐盒 Plus</a></h3>
-	  <h3>自制子网页:<a style = "margin:20px"  href="./W/QBXCXXT/在线查Q绑.html">Q绑查询系统</a>
-					<a style = "margin:20px"  href="./W/2212/DM.html">学号点名系统</a>
+
+	  <h3>项目推荐:<a style = "margin:20px"  href="./W/qqchabang/在线查Q绑.html">Q绑查询系统</a>
+<a style = "margin:20px"  href="./W/Project/Project.html">ZweiAi</a>
 	  </h3>
-	  <h3>网站项目:<a href="./W/TGFW/TGGL/MIMA.html"target="_blank">[托管网站登录]</a></h3>
+
 	  
 	  
       <hr />
@@ -592,6 +592,8 @@ body {
 	      <details>
 	          <summary><b>（点击展开或关闭列表）</b></summary>
 	          <ol>
+      <h1 align="center"><a href="https://ikun.ee/ "target="_blank"style="color: #0055ff;;font-size=20px"
+	  >鸡乐盒 Plus</a></h1>	  
       <h1 align="center"><a href="https://www.mihoyo.com/ "target="_blank"style="color: #0055ff;;font-size=20px"
 	  >米哈游官网</a></h1>
       <h1 align="center"><a href="https://huang14hb.gitee.io/hw2/"target="_blank"style="color: #0055ff;;font-size=20px"
@@ -855,7 +857,7 @@ function() {
         </span>
 <h2><a 
           style="margin: 20px;color: #00aa96"
-          href="./W/WXSK/WXSK.html"
+          href="./W/donation/WXSK.html"
           >（捐赠作者和网站）</a
         >
 </h2>
