--- a/W/Web hosting/TGGL/MIMA.html
+++ b/W/Web hosting/TGGL/MIMA.html
@@ -56,7 +56,12 @@
 		window.location.href="./JLworld/AJLworld.html";//添加你要跳转的页面
 		break;   
 		}    
-
+		
+		if (pass1 == "1031") {//设置密码
+		alert('花');   
+		window.location.href="./ZYT/1.html";//添加你要跳转的页面
+		break;   
+		}    
 		
 		testV+=1;   
 		var pass1 =    
