--- a/W/Web hosting/Web hosting.html
+++ b/W/Web hosting/Web hosting.html
@@ -258,7 +258,7 @@
 	<body>
 			<h1 align="center">---网页托管服务页面---</h1>
 <h2 align="center">简介：</h2>
-<h3 align="center">你出钱我就帮助托管你辛辛苦苦写的网页。</h3>
+<h3 align="center">帮助托管网页。</h3>
 
 
 <hr />
@@ -280,7 +280,7 @@
 <h2 align="center">托管网站查看：<a style="color: #ff0000" target="_blank"
 href="./TGGL/MIMA.html"
 >网站登录页面</a></h2>
-<h2 align="center">（当前托管网站数：<font color="red">3</font>）</h2>
+<h2 align="center">（当前托管网站数：<font color="red">5</font>）</h2>
 <hr />
 
 
