--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ _________                   .__  __    .__
 	<!--标签页文字切换-->
 	<script type="text/javascript">    
 	    window.onblur=function(){        
-	        document.title="去哪了？快回来！";    
+	        document.title="点击继续浏览";    
 	        };    
 	        window.onfocus=function () {        
 	        document.title="Czwiki导航网";   
@@ -416,6 +416,7 @@ body {
 		<!--滚动条-->
 		<marquee behavior="alternate" scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #959595;">
 
+
 			
 		</marquee>
 		  
@@ -472,8 +473,9 @@ body {
 
 
 
-<!--天气预报-->
+<!--天气预报
 <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tm&skin=baidu" align="center" frameborder="0" width="270" height="24" allowtransparency="true"></iframe>
+-->
 
 <!--搜索栏-->	
     <div class="browser-container">
@@ -580,7 +582,7 @@ body {
 	  <hr />
 	  
 
-	  <h3>项目推荐:<a style = "margin:20px"  href="./W/qqchabang/在线查Q绑.html">Q绑查询系统</a>
+	  <h3>其他项目:<a style = "margin:20px"  href="./W/qqchabang/在线查Q绑.html">Q绑查询系统</a>
 <a style = "margin:20px"  href="./W/Project/Project.html">ZweiAi</a>
 	  </h3>
 
@@ -807,6 +809,9 @@ function() {
     100)
 } ();
 </script>
+
+
+
 
     </article>
 	  <!-- 底部 -->
