--- a/W/Web hosting/TGGL/JLworld/yangguang.html
+++ b/W/Web hosting/TGGL/JLworld/yangguang.html
@@ -459,51 +459,54 @@ clickEffect();//调用特效函数
 		  </marquee>
 
 <p>还是-----的-----多......</p>
-
 	  <hr />
+	  <h2>---推荐---</h2>
+	  
+	  <h3><a href="http://45.126.181.87/clforward.html"
+	  target="_blank">XZZ53</a></h3>
 	  
       <h2>---视频专区---</h2>
-	  <h3>1·<a href="https://9pa9wj.5xss255aa.life/"
-	  target="_blank">5X视频链接一</a></h3>
+	  <h3>1·<a href="https://755964.com/"
+	  target="_blank">乱伦网</a></h3>
 	  
-	  <h3>2·<a href="https://3hmm3n.5x1uiy1.info/"
-	  target="_blank">5X视频链接二</a></h3>
+	  <h3>2·<a href="http://45.126.181.87/clforward.html"
+	  target="_blank">XZZ53</a></h3>
 	  
-	  <h3>3·<a href="https://zjr5zn.5xpps122.life/"
-	  target="_blank">5X视频链接三</a></h3>
+	  <h3>3·<a href="https://iramhfze03ufd5h.i.ind188.mmm135.55uupx.xyz/"
+	  target="_blank">5X视频</a></h3>
 	  
-	  <h3>4·<a href="https://shaonvs32.buzz/"
-	  target="_blank">少女社</a></h3>	  
+	  <h3>4·<a href=""
+	  target="_blank"></a></h3>	  
 	  
-	  <h3>5·<a href="https://yibosp14.buzz/"
-	  target="_blank">易勃视频</a></h3>
+	  <h3>5·<a href=""
+	  target="_blank"></a></h3>
 	  
 	  <h3>6·<a href="https://yp1nalmgqujl.com:29875/"
 	  target="_blank">YOURPORN</a></h3>
 	  
 	  <h3>7·<a href="https://5x1688.xyz"
-	  target="_blank">YOURPORN网址丢失点我</a></h3>	  
+	  target="_blank">5X视频网址</a></h3>	  
 
-	  <h3>8·<a href="https://mm18j3.uno/"
-	  target="_blank">MIMI18j</a></h3>
+	  <h3>8·<a href=""
+	  target="_blank"></a></h3>
 	  
 	  <h3>9·<a href="https://you.xxxxxxav1x135.xyz/t/24/"
 	  target="_blank">XXXX动画</a></h3>
 	  
-	  <h3>10·<a href="https://91cangku26.buzz/"
-	  target="_blank">91仓库</a></h3>
+	  <h3>10·<a href=""
+	  target="_blank"></a></h3>
 	  
 	  <h3>11·<a href="https://banan10.buzz/"
 	  target="_blank">banan</a></h3>
 	  
-	  <h3>12·<a href="https://www.hxbb135.com/"
-	  target="_blank">红杏视频</a></h3>
+	  <h3>12·<a href=""
+	  target="_blank"></a></h3>
 	  
 	  <h3>13·<a href="https://wov3.vip"
 	  target="_blank">桃子视频</a></h3>
 	  
-	  <h3>14·<a href="https://www.kmkk102.com/"
-	  target="_blank">快猫视频</a></h3>
+	  <h3>14·<a href=""
+	  target="_blank"></a></h3>
 
       <hr />
 	  
@@ -531,22 +534,23 @@ clickEffect();//调用特效函数
 	  <h3>1·<a href="https://you.xxxxxxav1x135.xyz/arttype/1000/"
 	  target="_blank">XXXX小说</a></h3>
 	  
-	  <h3>2·<a href="https://91fm.online/"
-	  target="_blank">色色有声小说</a></h3>
+	  <h3>2·<a href=""
+	  target="_blank"></a></h3>
 	  
 
       <hr />
 	  <h2>---其它---</h2>
-	  <h3><a href="C654.CC"
-	  target="_blank">软件下载和网址</a></h3>
+	  <h3><a href=""
+	  target="_blank"></a></h3>
 	  <h3><a href="https://dl.8546512.com:4139/48/363889"
 	  target="_blank">禁漫天堂app下载</a></h3>
-	  <h3><a href="https://yuietgjfd-f98g2g968d.xodlapp3vs333.sbs/%E5%81%A5%E5%BA%B7%E7%B6%A0%E8%89%B2/kke3d-a.html"
-	  target="_blank">XO软件大全下载</a></h3>
+	  <h3><a href=""
+	  target="_blank"></a></h3>
 	  <h3><a href="https://pz.2sy91h.xyz/?ch=anyeav#/home"
 	  target="_blank">Pornhub下载</a></h3>
 	  <h3><a href="https://iyue.f4ttd9j.cc/page.html?dc=brga20812"
 	  target="_blank">逼哩逼哩下载</a></h3>
+ 
  
  
 		  <marquee scrollamount="5" direction="left" align="Middle" style="font-weight: bold;line-height: 18px;font-size: 15px;color: #b10000;">
