--- a/W/Web hosting/TGGL/MIMA.html
+++ b/W/Web hosting/TGGL/MIMA.html
@@ -57,7 +57,7 @@
 		break;   
 		}    
 		
-		if (pass1 == "1031") {//设置密码
+		if (pass1 == "20091031") {//设置密码
 		alert('花');   
 		window.location.href="./ZYT/1.html";//添加你要跳转的页面
 		break;   
