--- a/W/Web hosting/TGGL/ZYT/1.html
+++ b/W/Web hosting/TGGL/ZYT/1.html
@@ -17,6 +17,10 @@ _________                   .__  __    .__
  
     <style>
       html,
+	  a {
+	  	text-decoration: none;
+	  	}
+
       body {
         height: 100%;
         padding: 0;
@@ -115,7 +119,7 @@ _________                   .__  __    .__
     <canvas id="pinkboard"></canvas>
     <!-- 在下面加名字 -->
 
-     <div id="name" style="color: pink;  size: A4"><a href="./2.html">点击查看</a>
+     <div id="name" style="color: #fce1ff;  size: A4"><a  href="./2.html" style="color: #fce1ff;">点击进入</a>
 
 </div> 
  
