--- a/W/Web hosting/TGGL/ZYT/2.html
+++ b/W/Web hosting/TGGL/ZYT/2.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<style>
+	a {
+	text-decoration: none;
+	}
+	</style>
 <title>玫瑰</title>
 <meta charset="utf-8">
 </head>
@@ -21,6 +26,7 @@ with(m=Math)C=cos,S=sin,P=pow,R=random;c.width=c.height=f=500;h=-250;function p(
 </script><br>
 </p>
 <h3 align="center">花有点简陋</h3>
+<h3 align="center"><a  href="./3.html" style="color: #FC0101;">点我！</a></h3>
 </body>
 </html>
 
